--- a/tests/integration-tests/tests/dashboard/test_dashboard/test_dashboard/pcluster.config.yaml
+++ b/tests/integration-tests/tests/dashboard/test_dashboard/test_dashboard/pcluster.config.yaml
@@ -31,3 +31,4 @@ Monitoring:
   Dashboards:
     CloudWatch:
       Enabled: {{ dashboard_enabled }}
+      EnableErrorMetrics: {{ enabled_error_metrics }}
