--- a/tests/integration-tests/tests/iam/test_iam/test_iam_roles/HIT.ini
+++ b/tests/integration-tests/tests/iam/test_iam/test_iam_roles/HIT.ini
@@ -13,6 +13,7 @@ base_os = {{ os }}
 queue_settings = compute
 ec2_iam_role = {{ ec2_iam_role }}
 iam_lambda_role = {{ iam_lambda_role }}
+template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
