--- a/tests/integration-tests/tests/resource_bucket/test_resource_bucket/test_resource_bucket/pcluster.config_awsbatch.ini
+++ b/tests/integration-tests/tests/resource_bucket/test_resource_bucket/test_resource_bucket/pcluster.config_awsbatch.ini
@@ -19,3 +19,4 @@ master_instance_type = {{ instance }}
 compute_instance_type = {{ instance }}
 min_vcpus=1
 cluster_resource_bucket = {{ resource_bucket }}
+template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
