--- a/tests/integration-tests/tests/update/test_update/test_update_awsbatch/pcluster.config.update.ini
+++ b/tests/integration-tests/tests/update/test_update/test_update_awsbatch/pcluster.config.update.ini
@@ -16,6 +16,7 @@ max_vcpus = 4
 cluster_type = spot
 spot_bid_percentage = 70
 tags = {"key": "value3", "key2": "value2"}
+template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
