--- a/tests/integration-tests/tests/configure/test_pcluster_configure/test_pcluster_configure_avoid_bad_subnets/pcluster.config.ini
+++ b/tests/integration-tests/tests/configure/test_pcluster_configure/test_pcluster_configure_avoid_bad_subnets/pcluster.config.ini
@@ -10,6 +10,7 @@ key_name = {{ key_name }}
 vpc_settings = default
 scheduler = slurm
 master_instance_type = t2.micro
+template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
 
 [vpc default]
 vpc_id = {{ vpc_id }}
