--- a/tests/integration-tests/tests/dcv/test_dcv/test_dcv_configuration/pcluster.config.ini
+++ b/tests/integration-tests/tests/dcv/test_dcv/test_dcv_configuration/pcluster.config.ini
@@ -21,6 +21,7 @@ maintain_initial_size = true
 {% endif %}
 dcv_settings = test
 shared_dir = {{ shared_dir }}
+template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
