--- a/tests/integration-tests/tests/iam/test_iam/test_iam_policies/pcluster.config.ini
+++ b/tests/integration-tests/tests/iam/test_iam/test_iam_policies/pcluster.config.ini
@@ -12,6 +12,7 @@ additional_iam_policies = {{ iam_policies }}
 master_instance_type = {{ instance }}
 compute_instance_type = {{ instance }}
 base_os = {{ os }}
+template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
