--- a/tests/integration-tests/tests/iam/test_iam/test_s3_read_write_resource/pcluster.config.ini
+++ b/tests/integration-tests/tests/iam/test_iam/test_s3_read_write_resource/pcluster.config.ini
@@ -13,6 +13,7 @@ compute_instance_type = {{ instance }}
 base_os = {{ os }}
 s3_read_resource = arn:aws:s3:::{{ bucket }}/read_only/*
 s3_read_write_resource = arn:aws:s3:::{{ bucket }}/read_and_write/*
+template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
