--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -39,10 +39,11 @@ cloudwatch_logging:
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["alinux2"]
         schedulers: {{ common.SCHEDULERS_TRAD }}
-      - regions: ["us-gov-east-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["awsbatch"]
+# awsbatch temporarily disabled because of https://github.com/aws/aws-parallelcluster/issues/4229
+#      - regions: ["us-gov-east-1"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: ["alinux2"]
+#        schedulers: ["awsbatch"]
       # 2) run the test for all x86 OSes with slurm
       - regions: ["ap-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
@@ -66,10 +67,11 @@ configure:
         schedulers: ["slurm"]
       # Do not run on ARM + Batch
       # pcluster configure always picks optimal and Batch does not support ARM for optimal for now
-      - regions: ["us-gov-west-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["awsbatch"]
+# awsbatch temporarily disabled because of https://github.com/aws/aws-parallelcluster/issues/4229
+#      - regions: ["us-gov-west-1"]
+#        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+#        oss: ["alinux2"]
+#        schedulers: ["awsbatch"]
   test_pcluster_configure.py::test_pcluster_configure_avoid_bad_subnets:
     dimensions:
       - regions: ["us-east-1"]  # region must be us-east-1 due to hardcoded logic for AZ selection
@@ -340,7 +342,7 @@ scaling:
 schedulers:
   test_awsbatch.py::test_awsbatch:
     dimensions:
-      - regions: ["eu-north-1", "us-gov-west-1", "cn-north-1"]
+      - regions: ["eu-north-1"] # "us-gov-west-1", "cn-north-1"] # awsbatch temporarily disabled because of https://github.com/aws/aws-parallelcluster/issues/4229
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["alinux2"]
         schedulers: ["awsbatch"]
@@ -448,7 +450,7 @@ storage:
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: {{ common.OSS_CHINA_X86 }}
         schedulers: ["slurm"]
-      - regions: ["ap-northeast-1", "cn-north-1"]
+      - regions: ["ap-northeast-1"] # "cn-north-1" # awsbatch temporarily disabled because of https://github.com/aws/aws-parallelcluster/issues/4229
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: {{ common.OSS_BATCH }}
         schedulers: ["awsbatch"]
