Enable workaround only for AWSBatch case
Workaround is https://github.com/aws/aws-parallelcluster/wiki/(2.11.7-and-earlier)-Cluster-creation-fails-with-awsbatch-scheduler
This to avoid tests to fail in aws-us-gov and aws-cn when using scheduler != awsbatch

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/tests/iam/test_iam/test_iam_policies/pcluster.config.ini
+++ b/tests/integration-tests/tests/iam/test_iam/test_iam_policies/pcluster.config.ini
@@ -12,7 +12,9 @@ additional_iam_policies = {{ iam_policies }}
 master_instance_type = {{ instance }}
 compute_instance_type = {{ instance }}
 base_os = {{ os }}
+{% if scheduler == "awsbatch" %}
 template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
+{% endif %}
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
