--- a/tests/integration-tests/tests/schedulers/test_awsbatch/test_awsbatch/pcluster.config.ini
+++ b/tests/integration-tests/tests/schedulers/test_awsbatch/test_awsbatch/pcluster.config.ini
@@ -18,7 +18,9 @@ max_vcpus = 40
 # EFS is integrated in order to exercise the mount_efs.sh script called from the
 # entry point of the docker image generated when the scheduler is awsbatch.
 efs_settings = custom_efs
+{% if scheduler == "awsbatch" %}
 template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
+{% endif %}
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
