--- a/tests/integration-tests/tests/networking/test_multi_cidr/test_multi_cidr/pcluster.config.ini
+++ b/tests/integration-tests/tests/networking/test_multi_cidr/test_multi_cidr/pcluster.config.ini
@@ -16,7 +16,9 @@ max_queue_size = 1
 {% if scheduler != "awsbatch" %}
 maintain_initial_size = true
 {% endif %}
+{% if scheduler == "awsbatch" %}
 template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
+{% endif %}
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
