--- a/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.ini
+++ b/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.ini
@@ -20,7 +20,9 @@ maintain_initial_size = true
 {% endif %}
 efs_settings = parallelcluster-efs
 fsx_settings = parallelcluster-fsx
+{% if scheduler == "awsbatch" %}
 template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
+{% endif %}
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
