--- a/tests/integration-tests/tests/storage/test_ebs/test_ebs_multiple/pcluster.config.ini
+++ b/tests/integration-tests/tests/storage/test_ebs/test_ebs_multiple/pcluster.config.ini
@@ -19,7 +19,9 @@ initial_queue_size = 1
 maintain_initial_size = true
 {% endif %}
 ebs_settings = ebs1, ebs2, ebs3, ebs4, ebs5
+{% if scheduler == "awsbatch" %}
 template_url = https://us-east-1-aws-parallelcluster.s3.amazonaws.com/patches/2.11.7/aws-parallelcluster-2.11.7.cfn.json
+{% endif %}
 
 [vpc parallelcluster-vpc]
 vpc_id = {{ vpc_id }}
