--- a/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
+++ b/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
@@ -9,18 +9,6 @@ HeadNode:
     KeyName: {{ key_name }}
   Imds:
     Secured: {{ imds_secured }}
-{% if instance == "p4d.24xlarge" %}
-  Iam:
-    # Needed to use the p4d capacity reservation
-    AdditionalIamPolicies:
-      - Policy: arn:aws:iam::aws:policy/AmazonEC2FullAccess
-    S3Access:
-      - BucketName: {{ bucket_name }}
-        EnableWriteAccess: false
-  CustomActions:
-    OnNodeConfigured:
-      Script: s3://{{ bucket_name }}/run_instance_override.sh
-{% endif %}
 Scheduling:
   Scheduler: {{ scheduler }}
   SlurmQueues:
@@ -40,6 +28,10 @@ Scheduling:
           Efa:
             Enabled: true
             {% if instance == "p4d.24xlarge" %}GdrSupport: true{% endif %}
+{% if instance == "p4d.24xlarge" %}
+          CapacityReservationTarget:
+            CapacityReservationId: cr-0fa65fcdbd597f551
+{% endif %}
 SharedStorage:
   - MountDir: /shared
     Name: name1
